Fix: Enhance ScreenThree appearance and readability
This commit introduces several enhancements to the ScreenThree component to improve its appearance and readability.

- Added padding to the center container for better visual spacing.
- Adjusted text alignment to justified for improved readability of the text within the center container.
- Imported and positioned `spring_image` and `spiral` images for visual appeal.
- Renamed `paraSection` to `paraSec` in CSS file for readability.

--- a/src/components/ScreenThree/screen-three.css
+++ b/src/components/ScreenThree/screen-three.css
@@ -35,9 +35,11 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
-.center-container .paraSection {
+.center-container .paraSec {
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -105,6 +107,7 @@
   text-align: center;
   margin-top: -5%;
   opacity: 1;
+  text-align: justify;
 }
 
 .boxes-container {
